- Create store for projects; - Update OIDC client config to request ProjectAPI scope.

--- a/ClientApp/public/locales/en.json
+++ b/ClientApp/public/locales/en.json
@@ -16,7 +16,7 @@
     "DASHBOARD": "Dashboard",
     "BUDGETS": "Budgets",
     "NOTES": "Notes",
-    "TASKS": "Tasks",
+    "PROJECTS": "Projects",
     "REPORTS": "Reports",
     "PROFILE": "Profile",
     "SETTINGS": "Settings",
