--- a/ClientApp/public/locales/ru.json
+++ b/ClientApp/public/locales/ru.json
@@ -16,7 +16,7 @@
     "DASHBOARD": "Дашборд",
     "BUDGETS": "Финансы",
     "NOTES": "Заметки",
-    "TASKS": "Задачи",
+    "PROJECTS": "Проекты",
     "REPORTS": "Отчеты",
     "PROFILE": "Профиль",
     "SETTINGS": "Настройки",
