Implement UI for Full-Text Search results.

--- a/ClientApp/public/locales/en.json
+++ b/ClientApp/public/locales/en.json
@@ -6,7 +6,7 @@
       "RUSSIAN": "Russian"
     },
     "SEARCH_PANEL": {
-      "TYPE_HERE": "Type here..."
+      "TYPE_HERE": "Navigate through my items"
     },
     "NOTIFICATION_POPOVER": {
       "NOTIFICATIONS": "Notifications"
