--- a/ClientApp/public/locales/ru.json
+++ b/ClientApp/public/locales/ru.json
@@ -6,7 +6,7 @@
       "RUSSIAN": "Русский"
     },
     "SEARCH_PANEL": {
-      "TYPE_HERE": "Введите ваше запрос..."
+      "TYPE_HERE": "Навигация по приколам"
     },
     "NOTIFICATION_POPOVER": {
       "NOTIFICATIONS": "Уведомления"
