Add hotkey for opening search box at the top of the page.

--- a/ClientApp/public/locales/en.json
+++ b/ClientApp/public/locales/en.json
@@ -6,7 +6,7 @@
       "RUSSIAN": "Russian"
     },
     "SEARCH_PANEL": {
-      "TYPE_HERE": "Navigate through my items"
+      "TYPE_HERE": "Press [Alt+K] for search"
     },
     "NOTIFICATION_POPOVER": {
       "NOTIFICATIONS": "Notifications"
